tests/rosetta/transpiler/Rust/first-class-functions-use-numbers-analogously.rs
// Generated by Mochi transpiler v0.10.50 on 2025-07-30 21:05 +0700
use std::sync::atomic::{AtomicBool, AtomicI64, Ordering};
use std::time::{SystemTime, UNIX_EPOCH};
static NOW_SEEDED: AtomicBool = AtomicBool::new(false);
static NOW_SEED: AtomicI64 = AtomicI64::new(0);
fn _now() -> i64 {
    if !NOW_SEEDED.load(Ordering::SeqCst) {
        if let Ok(s) = std::env::var("MOCHI_NOW_SEED") {
            if let Ok(v) = s.parse::<i64>() {
                NOW_SEED.store(v, Ordering::SeqCst);
                NOW_SEEDED.store(true, Ordering::SeqCst);
            }
        }
    }
    if NOW_SEEDED.load(Ordering::SeqCst) {
        let seed = (NOW_SEED.load(Ordering::SeqCst)*1664525 + 1013904223) % 2147483647;
        NOW_SEED.store(seed, Ordering::SeqCst);
        seed
    } else {
        SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
    }
}
fn _mem() -> i64 {
    if let Ok(mut f) = std::fs::File::open("/proc/self/statm") {
        let mut s = String::new();
        use std::io::Read;
        if f.read_to_string(&mut s).is_ok() {
            if let Some(p) = s.split_whitespace().next() {
                if let Ok(v) = p.parse::<i64>() {
                    return v * 4096;
                }
            }
        }
    }
    0
}
fn main() {
        let _start_mem: i64 = _mem();
    let _start: i64 = _now();
    fn multiplier(mut n1: f64, mut n2: f64) -> impl FnMut(f64) -> f64 {
    let mut n1n2: f64 = (n1 * n2);
    return move |m: f64| -> f64 { (n1n2 * (m as f64)) }
};
    fn mochi_main() {
    let mut x: f64 = 2.0;
    let mut xi: f64 = 0.5;
    let mut y: f64 = 4.0;
    let mut yi: f64 = 0.25;
    let mut z: f64 = (x + y);
    let mut zi: f64 = (1.0 / (x + y));
    let mut numbers: Vec<f64> = vec![x, y, z];
    let mut inverses: Vec<f64> = vec![xi, yi, zi];
    let mut mfs: Vec<fn> = vec![];
    let mut i: i64 = 0;
    while (i < (numbers.len() as i64)) {
        mfs = { let mut _v = mfs.clone(); _v.push(multiplier(numbers[i as usize], inverses[i as usize])); _v };
        i = (i + 1);
    }
    for mf in mfs.clone() {
        println!("{}", mf(1.0).to_string());
    }
};
    mochi_main();
    let _end: i64 = _now();
    let _end_mem: i64 = _mem();
    let duration_us: i64 = ((_end - _start) / 1000);
    let memory_bytes: i64 = (_end_mem - _start_mem);
    println!("{{\n  \"duration_us\": {},\n  \"memory_bytes\": {},\n  \"name\": \"{}\"\n}}", duration_us, memory_bytes, "main");

}
